2008-09-16  Kevin Day ("Blame")     <blame@aethyra.com>

	* Added autobuild.sh complete build script for the client
	* Updated the gui graphics for the client for halloween 

2008-09-12 	Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Changed default port for Aethyra to 21001
	* Modified "/where" command to display X and Y coordinates
	  (Again - this was done on 2008-08-21, but the changes
	  were overwritten somehow)
	* Added client support for Heal spell ("/cast heal")
	* Added client support for Gather spell ("/cast gather")
	* some changes to inventory system, to support the use of
	  "Kafra" storage (this is not yet operational - these
	  changes are only part of what's required to enable storage
	  in the client)

2008-09-04  Douglas Boffey ("Scraggy")  <scraggy@aethyra.com>

	* Added code to change colours in the chatlog

2008-08-30  Kevin Day ("Blame")     <blame@aethyra.com>

	* Updated the in game help files "/trunk/data/help"

2008-08-28  Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Patch to prevent crash if a map layer has too many
	  tiles (From TMW svn, r4544)

2008-08-26  Douglas Boffey ("Scraggy")	<DougABoffey@netscape.net>

	* Corrected position of registration dialogs

2008-08-21  Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Added configuration option "EnableSync" that causes
	  client to honor 0x88 "Stop Walking" packet.
	* Added X and Y coordinates to output of "/where"
	* Reformatted src/chat.cpp - it was missing indentation
	  in large areas

2008-08-17  Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Set the wallpaper based on the screen width.
	* Added a usleep to the login sequence loop to
	  prevent it from unnecessarily maxing out the CPU

2008-08-17	Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Correctly show GP remaining after buying from NPC
	  vendor (from TMW svn, r4449)

2008-08-17	Lloyd Bryant ("Sanga")	<sanga@aethyra.com>

	* Fixed issues with unequipping some arrows failing.
	* Removed hard-coded item ID's from several files
